Fix/dtis 27 onboarding top margin (#65)
* fix: apply margin top in Onboarding page instead Slides component

* fix: remove unused !important

* fix: remove margin for ionPage and create a transparent row with height as expected margin

* fix: removed unused !important

* feat: using custom class for IonPage in Onboarding.tsx

* fix: remove unused IonRow

* fix: Add PageLayout to fix top overlapping bug

* fix: Remove unused style

---------

--- a/src/ui/pages/Onboarding/Onboarding.scss
+++ b/src/ui/pages/Onboarding/Onboarding.scss
@@ -5,19 +5,13 @@
 // Define some colors
 $font-color: #030321;
 
-.ion-page {
-  margin-top: 50px;
-}
-
 .next-button {
   display: flex;
   align-items: center;
   gap: 10px;
-  --background: linear-gradient(
-                  91.86deg,
-                  #92ffc0 28.76%,
-                  #00a5e6 119.14%
-  ) !important;
+  --background: linear-gradient(91.86deg,
+      #92ffc0 28.76%,
+      #00a5e6 119.14%) !important;
   --background-activated: none;
   --border-radius: 30px;
   color: $font-color;
